# internal/delivery/rest/v1/tenant/register/handler.go
@@ -8,37 +8,37 @@ import (
 	"github.com/gin-gonic/gin"
 )
 
-// TenantRegisterHandler represents the HTTP handler for tenant-related operations
-type TenantRegisterHandler interface {
-	Register(*gin.Context)
+// handler represents the HTTP handler for tenant-related operations
+type handler interface {
+	register(*gin.Context)
 }
 
-type tenantRegisterHandler struct {
-	registerUsecase TenantRegisterUsecase
+type handlerImpl struct {
+	usecase usecase
 }
 
-// NewTenantRegisterHandler creates a new TenantHandler instance with a validator
-func newTenantRegisterHandler(
-	uc TenantRegisterUsecase,
-) TenantRegisterHandler {
-	return &tenantRegisterHandler{
-		registerUsecase: uc,
+// NewTenantRegisterHandler creates a newHandler TenantHandler instance with a validator
+func newHandler(
+	uc usecase,
+) handler {
+	return &handlerImpl{
+		usecase: uc,
 	}
 }
 
-// Register handles tenant registration
-// @Summary Register Tenant
-// @Description Register a new tenant in the system
+// register handles tenant registration
+// @Summary register Tenant
+// @Description register a new tenant in the system
 // @Tags Tenants
 // @Accept json
 // @Produce json
-// @Param body body RegisterTenantRequest true "Tenant registration request body"
-// @Success 201 {object} RegisterTenantResponse
+// @Param body body Request true "Tenant registration request body"
+// @Success 201 {object} Response
 // @Failure 400 {object} custom_errors.CustomError "Invalid request payload"
 // @Failure 422 {object} custom_errors.CustomError "Failed to register tenant"
 // @Router /api/v1/tenants/ [post]
-func (h *tenantRegisterHandler) Register(c *gin.Context) {
-	var request RegisterTenantRequest
+func (h *handlerImpl) register(c *gin.Context) {
+	var request Request
 
 	// Parse and validate the request payload
 	if err := h.parseAndValidateRequest(c, &request); err != nil {
@@ -46,24 +46,21 @@ func (h *tenantRegisterHandler) Register(c *gin.Context) {
 	}
 
 	// Execute the usecase
-	tenant, err := h.registerUsecase.Execute(c, request)
+	tenant, err := h.usecase.execute(c, request)
 	if err != nil {
 		c.Error(custom_errors.New(err, custom_errors.TenantUnprocessEntity, "failed to register the tenant."))
 		return
 	}
 
-	// Transform the tenant entity into a response DTO
-	response := NewRegisterTenantResponse(tenant)
-
 	// Respond with the created tenant
 	c.JSON(http.StatusCreated, gin.H{
 		"status":  "success",
 		"message": "Tenant registered successfully",
-		"data":    response,
+		"data":    transform(tenant),
 	})
 }
 
-func (h *tenantRegisterHandler) parseAndValidateRequest(c *gin.Context, request *RegisterTenantRequest) error {
+func (h *handlerImpl) parseAndValidateRequest(c *gin.Context, request *Request) error {
 	// Parse the incoming JSON request
 	if err := c.ShouldBindJSON(request); err != nil {
 		c.Error(custom_errors.New(
@@ -75,7 +72,7 @@ func (h *tenantRegisterHandler) parseAndValidateRequest(c *gin.Context, request 
 
 	// Validate the request using the validator
 	if err := validator.Validate.Struct(request); err != nil {
-		validationErrors := request.CustomValidationMessages(err)
+		validationErrors := request.customValidationMessages(err)
 		c.Error(custom_errors.New(
 			err,
 			custom_errors.TenantUnprocessEntity,
