# internal/delivery/rest/v1/tenant/register/response.go
@@ -6,16 +6,16 @@ import (
 	"github.com/banggok/boillerplate_architecture/internal/data/entity"
 )
 
-// RegisterTenantResponse represents the response payload for tenant registration.
-type RegisterTenantResponse struct {
+// Response represents the response payload for tenant registration.
+type Response struct {
 	ID        uint      `json:"id"`
 	CreatedAt time.Time `json:"created_at"`
 	UpdatedAt time.Time `json:"updated_at"`
 }
 
-// NewRegisterTenantResponse transforms a Tenant entity into a RegisterTenantResponse DTO.
-func NewRegisterTenantResponse(tenant entity.Tenant) RegisterTenantResponse {
-	return RegisterTenantResponse{
+// transform transforms a Tenant entity into a RegisterTenantResponse DTO.
+func transform(tenant entity.Tenant) Response {
+	return Response{
 		ID:        tenant.ID(),
 		CreatedAt: tenant.CreatedAt(),
 		UpdatedAt: tenant.UpdatedAt(),
